# serializer version: 1
# name: test_passport_short_series_fallback
  dict({
    'error': 'Недостаточно данных (нужно > 30 точек)',
  })
# ---
# name: test_passport_v1_0_snapshot
  dict({
    'autocorrelation': dict({
      'is_ok': False,
      'is_white_noise': False,
      'value': 6.588587753591918e-67,
    }),
    'basic_stats': dict({
      'max': 159.00532123644638,
      'mean': 124.47478038604586,
      'min': 87.86249739826592,
      'n': 110,
      'std': 18.13780575171713,
    }),
    'correlations': dict({
    }),
    'determinism': dict({
      'is_deterministic': False,
      'slope': 0.4436550700998605,
      'value': 0.6087736173219928,
    }),
    'fft': dict({
      'count': 2,
      'dominant_periods': list([
        np.float64(12.222222222222221),
        np.float64(110.0),
      ]),
    }),
    'freq': dict({
      'is_ok': True,
      'value': 'MS',
    }),
    'hurst': dict({
      'type': 'anti_persistent',
      'value': -0.009956938048624984,
    }),
    'normality': dict({
      'is_normal': True,
      'is_ok': True,
      'value': 0.21726510841300956,
    }),
    'periodogram': dict({
      'count': 3,
      'periods': list([
        np.float64(2.291666666666667),
        np.float64(2.75),
        np.float64(6.111111111111111),
      ]),
    }),
    'seasonal_periods': dict({
      'count': 1,
      'periods': list([
        20,
      ]),
    }),
    'seasonality': dict({
      'is_seasonal': True,
      'strength': 0.7717409227543119,
    }),
    'stationarity': dict({
      'is_ok': False,
      'is_stationary': False,
      'value': 0.9749742704307862,
    }),
    'trend': dict({
      'direction': 'up',
      'slope': 0.4436550700998605,
    }),
    'wavelet': dict({
      'count': 1,
      'scales': list([
        10,
      ]),
    }),
  })
# ---
# name: test_passport_with_covariates_snapshot
  dict({
    'autocorrelation': dict({
      'is_ok': False,
      'is_white_noise': False,
      'value': 6.588587753591918e-67,
    }),
    'basic_stats': dict({
      'max': 159.00532123644638,
      'mean': 124.47478038604586,
      'min': 87.86249739826592,
      'n': 110,
      'std': 18.13780575171713,
    }),
    'correlations': dict({
      'max_abs_corr': 0.9642548089880628,
      'top3': dict({
        'covariate_1': 0.9642548089880628,
        'covariate_2': 0.11965742550639039,
      }),
    }),
    'determinism': dict({
      'is_deterministic': False,
      'slope': 0.4436550700998605,
      'value': 0.6087736173219928,
    }),
    'fft': dict({
      'count': 2,
      'dominant_periods': list([
        np.float64(12.222222222222221),
        np.float64(110.0),
      ]),
    }),
    'freq': dict({
      'is_ok': True,
      'value': 'MS',
    }),
    'hurst': dict({
      'type': 'anti_persistent',
      'value': -0.009956938048624984,
    }),
    'normality': dict({
      'is_normal': True,
      'is_ok': True,
      'value': 0.21726510841300956,
    }),
    'periodogram': dict({
      'count': 3,
      'periods': list([
        np.float64(2.291666666666667),
        np.float64(2.75),
        np.float64(6.111111111111111),
      ]),
    }),
    'seasonal_periods': dict({
      'count': 1,
      'periods': list([
        20,
      ]),
    }),
    'seasonality': dict({
      'is_seasonal': True,
      'strength': 0.7717409227543119,
    }),
    'stationarity': dict({
      'is_ok': False,
      'is_stationary': False,
      'value': 0.9749742704307862,
    }),
    'trend': dict({
      'direction': 'up',
      'slope': 0.4436550700998605,
    }),
    'wavelet': dict({
      'count': 1,
      'scales': list([
        10,
      ]),
    }),
  })
# ---
